init sprint4